syntax = "proto3";

option java_package = "com.example.databaseserver.generated";
option java_multiple_files = true;
option csharp_namespace = "HireFire.Grpc";

enum ApplicationStatus {
  UNDER_REVIEW = 0;
  DECLINED = 1;
  MATCHED = 2;
}


service ApplicationService {
  rpc CreateApplication (CreateApplicationRequest) returns (ApplicationResponse);
}


message CreateApplicationRequest {
  int64 job_id = 1;
  int64 applicant_id = 2;
}


message ApplicationResponse {
  int64 id = 1;
  int64 job_id = 2;
  int64 applicant_id = 3;
  string submitted_at = 4;
  ApplicationStatus status = 5;
}