syntax = "proto3";

option csharp_namespace = "HireFire.Grpc";

service ChatService{
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
  rpc Save (SaveMessagesRequest) returns (SaveMessagesResponse);
  rpc GetChatHandshake (ChatHandshakeRequest) returns (ChatHandshakeResponse);

}

message ChatHandshakeRequest {
  int64 job_id = 1;
  int64 applicant_id = 2;
}

message ChatHandshakeResponse {
  int64 application_id = 1;
  bool exists = 2;
}

message ChatMessage {
  string sender_name = 1;
  string body = 2;
  string send_at = 3;
  int64 sender_id = 4;
}

message GetMessagesRequest {
  int64 application_id = 1;
}

message GetMessagesResponse {
  repeated ChatMessage messages = 1;
}

message SaveMessagesRequest {
  int64 application_id = 1;
  int64 sender_id = 2;
  string body = 3;
}
message SaveMessagesResponse {
  bool success = 1;
  ChatMessage created_message = 2;
}